--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/NMCT-Project/Back-end-Tapio-Test/issues"
   },
-  "homepage": "https://github.com/NMCT-Project/Back-end-Tapio-Test#readme"
+  "homepage": "https://github.com/NMCT-Project/Back-end-Tapio-Test#readme",
+  "dependencies": {
+    "express": "^4.14.0",
+    "express-stormpath": "^3.1.6"
+  }
 }
