--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "back-end-tapio-test",
-  "version": "0.0.1",
+  "name": "back-end-tapio-test-v2",
+  "version": "0.2.0",
   "description": "",
-  "main": "server.js",
+  "main": "app",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,9 +18,17 @@
   "homepage": "https://github.com/NMCT-Project/Back-end-Tapio-Test#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "errorhandler": "^1.4.3",
     "express": "^4.14.0",
-    "jsonwebtoken": "^7.1.9",
-    "mongoose": "^4.6.6",
-    "morgan": "^1.7.0"
+    "express-session": "^1.14.2",
+    "jade": "^1.11.0",
+    "method-override": "^2.3.6",
+    "mongodb": "^2.2.11",
+    "mongoose": "^4.6.7",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
   }
 }
