--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
   },
   "homepage": "https://github.com/NMCT-Project/Back-end-Tapio-Test#readme",
   "dependencies": {
-      "body-parser": "^1.15.2",
-      "cookie-parser": "^1.4.3",
-      "errorhandler": "^1.4.3",
-      "express": "^4.14.0",
-      "express-session": "^1.14.2",
-      "jade": "^1.11.0",
-      "method-override": "^2.3.6",
-      "mongodb": "^2.2.11",
-      "mongoose": "^4.6.7",
-      "morgan": "^1.7.0",
-      "passport": "^0.3.2",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "errorhandler": "^1.4.3",
+    "express": "^4.14.0",
+    "express-session": "^1.14.2",
+    "jade": "^1.11.0",
+    "method-override": "^2.3.6",
+    "mongodb": "^2.2.11",
+    "mongoose": "^4.6.7",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth2": "^0.1.6"
   }
 }
