--- a/package.json
+++ b/package.json
@@ -31,5 +31,14 @@
     "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean-css": "^2.0.13",
+    "gulp-concat": "^2.6.1",
+    "gulp-csslint": "^1.0.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-sourcemaps": "^2.2.0"
   }
 }
