--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/NMCT-Project/Back-end-Tapio-Test#readme",
   "dependencies": {
+    "async": "^2.1.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "errorhandler": "^1.4.3",
@@ -24,13 +26,15 @@
     "express-session": "^1.14.2",
     "jade": "^1.11.0",
     "method-override": "^2.3.6",
-    "mongoose": "^4.6.7",
+    "mongoose": "^4.6.8",
     "morgan": "^1.7.0",
+    "nodemailer": "^2.6.4",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0"
+    "passport-local-mongoose": "^4.0.0",
+    "passport-local-mongoose-email": "^0.1.3"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
