--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "jade": "^1.11.0",
+    "jsonwebtoken": "^7.1.9",
     "method-override": "^2.3.6",
     "mongoose": "^4.6.7",
     "morgan": "^1.7.0",
