--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-facebook-token": "^3.3.0",
     "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0"
