--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
-    "passport-local-mongoose-email": "^0.1.3"
+    "passport-local-mongoose-email": "^0.1.3",
+    "which-country": "^1.0.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
