--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
+    "gulp-api-doc": "^1.1.0",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1"
   }
