--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-jshint": "^2.0.4",
     "gulp-notify": "^2.2.0",
+    "gulp-smushit": "^1.2.0",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
     "jade": "^1.11.0",
